add _PIP_ADDITIONAL_REQUIREMENTS: textblob

--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -77,7 +77,7 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- pycaret[mlops] nltk boto3}
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- pycaret[mlops] nltk boto3 textblob}
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
